--- a/app/views/avaliacao_notificacaos/_avaliacao_sensitiva_print.html.erb
+++ b/app/views/avaliacao_notificacaos/_avaliacao_sensitiva_print.html.erb
@@ -23,7 +23,7 @@
     </div>
     <div class="row">
       <% avaliacao_sensitiva.sensitiva_images.each do |s| %>
-          <div class="col s12 l4">
+          <div class="col s6">
             <img src="<%= s.imagem.url %>" alt="" width="200px">
           </div>
       <% end %>
