--- a/app/views/notificacaos/_episodios_relacionais.html.erb
+++ b/app/views/notificacaos/_episodios_relacionais.html.erb
@@ -3,7 +3,7 @@
   <tr>
     <th>Tipo</th>
     <th>Número de episódios</th>
-    <th>Conduta mendicamentosa</th>
+    <th>Conduta medicamentosa</th>
     <th>Data início</th>
     <th>Data término</th>
   </tr>
