--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -155,11 +155,52 @@
       opacity: 1;
       background:white;
     }
-      @media print{
-        .hide_print{
-          display:none;
-        }
+
+
+
+    .no-print{
+      display:block;
+    }
+
+    .print{
+      display:none;
+    }
+
+    @media print{
+      .container{
+        width: 100%;
       }
+
+      #main{
+        padding: 0 !important;
+      }
+
+
+
+      body {
+        margin:0;
+        padding:0;
+        line-height: 1.4em;
+      }
+
+      @page {
+        margin: 0.5cm;
+      }
+
+      nav, footer, video, audio, object, embed,aside {
+        display:none;
+      }
+
+      .no-print{
+        display:none;
+      }
+
+      .print{
+        display:block;
+      }
+
+
+    }
   </style>
   <script type="text/javascript">
     $(document).on('nested:fieldAdded', function(event){
