--- a/app/views/notificacaos/_form.html.erb
+++ b/app/views/notificacaos/_form.html.erb
@@ -13,6 +13,7 @@
 <div class="card-panel">
   <%= f.hidden_field :paciente_id %>
   <%= f.hidden_field :recidiva_id %>
+  <%= f.hidden_field :avaliacao_notificacao_id %>
   <div class="row">
     <div class="col s12 l6 input-field">
 
