--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -36,6 +36,11 @@
           </a>
         </li>
         <li class="bold">
+          <a href="/notificacaos/avaliacao_pendente" class="waves-effect waves-cyan">
+            <i class="fa fa-warning"></i> Avaliações Pendentes
+          </a>
+        </li>
+        <li class="bold">
           <a href="/pacientes/mapa" class="waves-effect waves-cyan">
             <i class="fa fa-map"></i> Mapa dos Pacientes
           </a>
