dant - cadastro requisicao

--- a/app/views/dant_pacients/_form.html.erb
+++ b/app/views/dant_pacients/_form.html.erb
@@ -55,10 +55,11 @@
 
     </div>
   </div>
-  <div class="input-field">
+  <div class="input">
 
-    <%= f.label :idade %>
-    <%= f.number_field :idade %>
+    <%= f.label :data_nascimento %>
+    <%= f.date_field :data_nascimento %>
+
     
   </div>
 
