--- a/app/views/dant_pacients/show.html.erb
+++ b/app/views/dant_pacients/show.html.erb
@@ -35,6 +35,12 @@
   <div class="row">
     <div class="col s12 l3">
       <p>
+        <strong>Nascimento:</strong>
+        <%= @dant_pacient.data_nascimento %>
+      </p>
+    </div>
+    <div class="col s12 l3">
+      <p>
         <strong>Idade:</strong>
         <%= @dant_pacient.idade %>
       </p>
