planilha faixa etaria

--- a/app/views/dant_requests/_form.html.erb
+++ b/app/views/dant_requests/_form.html.erb
@@ -218,6 +218,12 @@
                   <% end %>
                   <%= esq.hidden_field :dant_pacient_id%>
                   <%= esq.hidden_field :idade%>
+                  <%= esq.hidden_field :hipertenso%>
+                  <%= esq.hidden_field :diabetico%>
+                  <%= esq.hidden_field :tabagista%>
+                  <%= esq.hidden_field :etilista%>
+                  <%= esq.hidden_field :obeso%>
+                  <%= esq.hidden_field :sexo%>
 
                 </div>
                 <div class="col s2">
