--- a/app/views/dant_requests/show.html.erb
+++ b/app/views/dant_requests/show.html.erb
@@ -20,6 +20,7 @@
     <%= @dant_request.status.upcase %>
   </p>
 
+  <div class="card-panel">
 <table>
   <thead>
   <th>DADOS</th>
@@ -147,6 +148,7 @@
   </tr>
   </tbody>
 </table>
+  </div>
   <% if @dant_request.status != :cadastrada %>
     <div class="card">
       <div class="card-content">
