--- a/app/views/dant_questions/index.html.erb
+++ b/app/views/dant_questions/index.html.erb
@@ -1,16 +1,21 @@
-<div class="card">  
+<div class="card">
+  <div class="card-content">
+<h1 class="center">Perguntas</h1>
+  </div>
+</div>
+<!--<div class="card">
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
       Pesquisa
     </span>
     <div id="pesquisa" class="not-show">
-      <%= search_form_for @q, url: request.env['PATH_INFO'] do |f|  %>
+      <%#= search_form_for @q, url: request.env['PATH_INFO'] do |f|  %>
       <%# f.text_field :name_cont, placeholder: "Pesquisar..." %>
-      <%= f.submit "Filtrar", class:"btn" %>
-      <% end %>
+      <%#= f.submit "Filtrar", class:"btn" %>
+      <%# end %>
     </div>
   </div>
-</div>
+</div>-->
 
 <table class="card striped responsive-table">
   <thead>
@@ -36,7 +41,7 @@
 </table>
 
 <div class="card-panel">
-  <%= paginate(@dant_questions)  %>
+  <%#= paginate(@dant_questions)  %>
 </div>
 
-<%= link_to '+ Cadastrar', new_dant_question_path, class:"btn" %>
+<%#= link_to '+ Cadastrar', new_dant_question_path, class:"btn" %>
