--- a/app/views/dant_requests/index.html.erb
+++ b/app/views/dant_requests/index.html.erb
@@ -1,15 +1,28 @@
 <div class="card">
   <h1 class="center-align">Solicitações</h1>
 </div>
-<div class="card">
+<div class="card" style="overflow: visible;">
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
       Pesquisa
     </span>
     <div id="pesquisa" class="not-show">
       <%= search_form_for @q, url: request.env['PATH_INFO'] do |f|  %>
+          <div class="row">
+            <div class="col l6 s12">
+              <%= f.label "Mês" %>
+              <%= f.select :mes_eq, [["MARÇO" , 3],["JUNHO" , 6],["SETEMBRO" , 9],["DEZEMBRO" , 12]],prompt: true %>
+
+            </div>
+            <div class="col l6 s12">
+              <%= f.label "Município" %>
+              <%= f.select :cidade_id_eq, @cidades,{prompt: true},{class:"browser-default chosen-select"} %>
+
+            </div>
+          </div>
           <%# f.text_field :name_cont, placeholder: "Pesquisar..." %>
           <%= f.submit "Filtrar", class:"btn" %>
+          <%= link_to "Limpar", dant_requests_path , class:"btn red" %>
       <% end %>
     </div>
   </div>
