--- a/app/views/dant_responsavel_programs/index.html.erb
+++ b/app/views/dant_responsavel_programs/index.html.erb
@@ -1,15 +1,28 @@
 <div class="card">
   <h1 class="center-align">Responsáveis pelos Programas</h1>
 </div>
-<div class="card">
+<div class="card" style="overflow: visible;">
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
       Pesquisa
     </span>
     <div id="pesquisa" class="not-show">
       <%= search_form_for @q, url: request.env['PATH_INFO'] do |f|  %>
-      <%# f.text_field :name_cont, placeholder: "Pesquisar..." %>
+          <div class="row">
+            <div class="col l6 s12">
+              <%= f.label :nome_cont, "Nome" %>
+              <%= f.text_field :nome_cont, placeholder: "Pesquisar..." %>
+            </div>
+            <% if current_user.administrador? || current_user.admin_dant? %>
+              <div class="col l6 s12">
+                <%= f.label "Município" %>
+                <%= f.select :cidade_id_eq, @cidades,{prompt: true},{class:"browser-default chosen-select"} %>
+              </div>
+            <% end %>
+          </div>
+
       <%= f.submit "Filtrar", class:"btn" %>
+          <%= link_to "Limpar", dant_responsavel_programs_path , class:"btn red" %>
       <% end %>
     </div>
   </div>
