--- a/app/views/pacientes/show.html.erb
+++ b/app/views/pacientes/show.html.erb
@@ -3,12 +3,12 @@
     <div class="col s12 l6">
       <p>
         <strong>Nome:</strong>
-        <%= @paciente.nome %>
+        <%= @paciente.nome.upcase %>
       </p>
 
       <p>
         <strong>Nome mae:</strong>
-        <%= @paciente.nome_mae %>
+        <%= @paciente.nome_mae.upcase %>
       </p>
 
       <p>
