--- a/app/views/layouts/_left_sidebar_default.html.erb
+++ b/app/views/layouts/_left_sidebar_default.html.erb
@@ -45,6 +45,16 @@
             <i class="fa fa-map"></i> Mapa dos Pacientes
           </a>
         </li>
+        <li class="bold">
+          <a href="/monthly_reports" class="waves-effect waves-cyan">
+            <i class="fa fa-list"></i> Relatório Mensal
+          </a>
+        </li>
+        <li class="bold">
+          <a href="/escala_parts" class="waves-effect waves-cyan">
+            <i class="fa fa-list"></i> Escala de Participação
+          </a>
+        </li>
         <% if current_user.administrador?  %>
             <li class="bold">
               <a href="/ocupacaos" class="waves-effect waves-cyan">
