--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -357,6 +357,7 @@ Scripts
 <script src="/imagefill/js/jquery-imagefill.js"></script>
 <script src="/datetime/jquery.datetimepicker.full.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+<script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=57ds9k02vjomihwdw5hh0zmvee7tplju9jj9ydv5urhk2lbn"></script>
 
 <!-- Toast Notification -->
 <% if flash[:notice].present? %>
